chore: numerical adjective for inch, 9 inch pan becomes 9-inch pan

--- a/dermardiros/hamquiche.tex
+++ b/dermardiros/hamquiche.tex
@@ -25,7 +25,7 @@
 Family member: Aunt Joanne
 
 \begin{enumerate}
-    \item Prepare a 9~inch piecrust, or take out the Tenderflake Deep Dish pie crust.
+    \item Prepare a 9-inch piecrust, or take out the Tenderflake Deep Dish pie crust.
     \item In a small skillet over medium heat, melt 2~tablespoons of margarine. Cook the chopped union until tender, about 5~minutes, stirring occasionally. Once cooked, spread it evenly in the pie crust.
     \item Preheat oven to 400\degree F.
     \item Chop the smoked ham slice into little cubes.
