--- a/dermardiros/quiche.tex
+++ b/dermardiros/quiche.tex
@@ -24,7 +24,7 @@
 Family member: Sybil
 
 \begin{enumerate}
-    \item Prepare a 9~inch pie plate with the pie dough.
+    \item Prepare a 9-inch pie plate with the pie dough.
     \item In a bowl, mix the cream and eggs with a whisk. Add the cut ham and shredded cheese.
     \item Preheat oven to 350\degree F.
     \item Pour the mix on the pie crust and top with ground pepper.
