--- a/dermardiros/meatpies.tex
+++ b/dermardiros/meatpies.tex
@@ -35,7 +35,7 @@ Family member: Aunt Joanne
     \item Add the breadcrumbs, split into both casseroles containing the meat mixture.
     \item Let stand 10~minutes. If enough liquid is absorbed by the breadcrumbs, no need to add any more. If not, add more breadcrumbs until excess liquid is absorbed. Set aside to cool.
     \item Preheat the oven to 500\degree F.
-    \item On a floured work surface, roll out the pie dough and cut it in 6~sections. Line 8-9~inch pie pans with the first circle of pie dough and divide the meat filling into all 6~pans. Roll out remaining pie dough into circles and place a second circle of pie dough over each pie, covering the meat mixture.
+    \item On a floured work surface, roll out the pie dough and cut it in 6~sections. Line 8-9-inch pie pans with the first circle of pie dough and divide the meat filling into all 6~pans. Roll out remaining pie dough into circles and place a second circle of pie dough over each pie, covering the meat mixture.
     \item Cut some steam vents in the centre of the crust. Seal the edges together with fork, then cut off excess.
     \item In a bowl, beat the eggs and brush the crust with the egg wash. Transfer the pies to the oven.
     \item Reduce temperature to 400\degree F and bake until the meat pies are golden brown, about 45~minutes.
