--- a/monanteras/karidopita.tex
+++ b/monanteras/karidopita.tex
@@ -36,7 +36,7 @@ Family member: Grandma Eleni
 
 \begin{enumerate}
     \item In a large bowl, mix all the ingredients for the cake using a whisk. Leave the gingerale for last.
-    \item Pour into a 12~x~18~inch sized metal pan. Bake at 350\degree F for ? minutes.
+    \item Pour into a 12~x~18-inch sized metal pan. Bake at 350\degree F for ? minutes.
     \item While cake is baking, make the syrup. Put the sugar and water in a medium pot and mix. Heat until it simmers and let it boil for 5~minutes. Remove from the heat and let it cool.
     \item Once the cake is done and has a golden colour, remove from the oven. Pour all of the cooled syrup onto the warm cake.
     \item Let the cake cool and cut into diamond shapes.
