fix: replace pounds with lbs and also make it a secondary unit, a dd grams

--- a/dermardiros/beuregtriangles.tex
+++ b/dermardiros/beuregtriangles.tex
@@ -10,19 +10,19 @@
     Cook time: 15-30~minutes \\
     \vspace*{\baselineskip}
 
-    1~lb Greek Phyllo, Krinos or another brand \\
+    454~g (1~lb) Greek Phyllo, Krinos or another brand \\
     Butter, melted and cooled, for brushing \\
     Eggs, for eggwash \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cheese filling} \\
     2~eggs, beaten \\
-    1~lb double cream Greek feta cheese, crumbled \\
+    454~g (1~lb) double cream Greek feta cheese, crumbled \\
     2~tbsp fresh parsley, chopped \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for meat filling} \\
-    1~lb ground beef, lean \\
+    454~g (1~lb) ground beef, lean \\
     1~onion, thinly chopped \\
     Pepper
 }
