--- a/dermardiros/mantuh.tex
+++ b/dermardiros/mantuh.tex
@@ -20,7 +20,7 @@
 
     \textbf{Ingredients for meat} \\
     1~medium onion, thinly chopped \\
-    1~lb ground lean beef \\
+    454~g (1~lb) ground lean beef \\
     Salt \& pepper to taste \\
     Armenian or Lebanese pepper
 }
