--- a/dermardiros/meatpies.tex
+++ b/dermardiros/meatpies.tex
@@ -10,9 +10,9 @@
     Prep time: 3~hours \\
     Cook time: 45~minutes, or 20~minutes for partially cooked (frozen) pies \vspace*{\baselineskip}
 
-    5~pounds minced veal (2.3~kg) \\
-    4~pounds minced pork (1.8~kg) \\
-    2~pounds minced lean beef (907~g or 1~kg) \\
+    2.3~kg (5~lbs) minced veal \\
+    1.8~kg (4~lbs) minced pork \\
+    907~g (2~lbs) minced lean beef \\
     Small pack of bacon with maple \\
     Becel margarine \\
     ¼~onion chopped in small pieces \\
