--- a/dermardiros/souloukefteh.tex
+++ b/dermardiros/souloukefteh.tex
@@ -11,7 +11,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for stock} \\
-    1~beef shank or 2~veal shanks (about 1~lb) \\
+    1~beef shank or 2~veal shanks (about 454~g/1~lb) \\
     1~large yellow onion \\
     2~bay leaves \\
     8-10~cups of water \\
@@ -20,7 +20,7 @@
 
     \textbf{Ingredients for soup} \\
     Reserved stock \\
-    1~lb ground beef \\
+    454~g (1~lb) ground beef \\
     ½~large yellow onion \\
     ¼~cup rice, Calrose \\
     ½~cup parsley, chopped \\
