--- a/monanteras/dolmadakia.tex
+++ b/monanteras/dolmadakia.tex
@@ -14,7 +14,7 @@
 
     \textbf{Dolmadakia ingredients} \\
     40~large grape leaves, blanched OR 1~jar of grape leaves in brine, Cedar \\
-    2~lbs lean ground beef \\
+    907~g (2~lbs) lean ground beef \\
     1~cup medium grain rice, uncooked \\
     2~large eggs \\
     1~large onion, finely diced \\
