--- a/monanteras/tiropitakia_spanakopitakia.tex
+++ b/monanteras/tiropitakia_spanakopitakia.tex
@@ -11,7 +11,7 @@
     Cook time: 15-30~minutes \\
     \vspace*{\baselineskip}
 
-    1~lb Greek Phyllo, Krinos or another brand \\
+    454~g (1~lb) Greek Phyllo, Krinos or another brand \\
     Olive oil, for brushing\\
     \vspace*{\baselineskip}
 
