--- a/dermardiros/hamquiche.tex
+++ b/dermardiros/hamquiche.tex
@@ -15,8 +15,8 @@
     Margarine \\
     1~large onion, chopped (about 1~cup) \\
     1~tablespoon all purpose flour \\
-    ¼~pound (120~grams) of Gruyere cheese \\
-    ¼~pound (120~grams) of Swiss cheese \\
+    120~g (¼~lb) of Gruyere cheese \\
+    120~g (¼~lb) of Swiss cheese \\
     1~slice of smoked ham \\
     3~large eggs \\
     1~cup half-and-half cream
