--- a/dermardiros/lahanai_dolma.tex
+++ b/dermardiros/lahanai_dolma.tex
@@ -12,7 +12,7 @@
     \vspace*{\baselineskip}
 
     ½~Savoy cabbage \\
-    1~lb of ground beef \\
+    454~g (1~lb) of ground beef \\
     ¼~cup + 1~tbsp rice, Calrose \\
     1~medium onion, chopped \\
     ½~tsp salt \\
